# pisa_hand

./: README.md
hand_full_control/: CMakeLists.txt  package.xml
hand_full_control/config/: gazebo_position_control.yaml  soft_hand_full_effort_control.yaml  soft_hand_full_position_control.yaml
hand_full_control/launch/: run.launch  rviz_run.launch
hand_full_control/robot/: soft_hand_full_actuation.urdf.xacro
hand_full_control/src/: finger_state_publisher.py  frames.gv  move_hand.py  move_hand_effort_control.py  move_hand_position_control.py
hand_full_control/worlds/: simple_environment.world
object_spawn/: CMakeLists.txt  package.xml
object_spawn/data/: finger_logs13_5.txt  finger_logs_o01_f5.txt  finger_logs_o02_f5.txt  finger_logs_o06_f5.txt  finger_logs_o13_f5.txt  finger_logs_o21_f5.txt  finger_logs_o25_f5.txt  plot_data.py
object_spawn/launch/: spawn.launch
object_spawn/meshes/: 01_chips_can_t.stl  02_master_chef_can_t.stl  06_mustard_bottle_t.stl  13_apple_t.stl  21_bleac_cleanser_t.stl  25_mug_t.stl  29_plate_t.stl  35_power_drill_t.stl  36_wood_block_t.stl  48_hammer_t.stl
object_spawn/src/: modify_stl.py  spawn.py
object_spawn/urdf/: object.urdf  sphere.urdf
soft_hand_description/model/: soft_hand.gazebo.xacro  soft_hand.transmission.xacro  soft_hand.urdf copy.xacro  soft_hand.urdf.xacro
