<?xml version="1.0"?>
<package>
  <name>hand_full_control</name>
  <version>0.0.0</version>
  <description>The hand_full_control package</description>

  <maintainer email="cjrosales@gmail.com">Carlos J. Rosales</maintainer>
  <license>GPLv2</license>
  

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>